refactor: delete unused composition subsystems
